generic service impl started

--- a/RESTApi/RESTApi/appsettings.json
+++ b/RESTApi/RESTApi/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "MySqlConnection": {
+    "MySqlConnectionString": "Server=localhost;Database=skeleton;uid=root;Pwd=root"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
