--- a/RESTApi/RESTApi/RESTApi.csproj
+++ b/RESTApi/RESTApi/RESTApi.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="3.1.2" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.4.10" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.9" />
@@ -21,7 +22,16 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Model\RestSkeleton.Model.csproj" />
-    <ProjectReference Include="..\Services\RestSkeleton.Service.csproj" />
+    <ProjectReference Include="..\Repository\RestSkeleton.Repository.csproj" />
+    <ProjectReference Include="..\Services\RestSkeleton.Business.csproj" />
   </ItemGroup>
+  
+   <Target Name="ChangeAliasesOfStrongNameAssemblies" BeforeTargets="FindReferenceAssembliesForReferences;ResolveReferences">
+    <ItemGroup>
+      <ReferencePath Condition="'%(FileName)' == 'MySqlConnector'">
+        <Aliases>MySqlConnectorAlias</Aliases>
+      </ReferencePath>
+    </ItemGroup>
+  </Target>
 
 </Project>
